  If turtle runs low on fuel, comes back and errors.
  Fixed turtle asking rednet enabled when there is no modem
  Removed invCheckFreq parameter. I doubt anyone used it. It now just checks every 1



----Quarry Receiver----
--Version 3.6.2
  Fixed bugs for 1.4.7 users
  
--Version 3.6.1
  QuadRotors!
  Changed so that receiver can drop in while turtle is going
  Fixed bug where computer would glitch out if "-screen computer [number]" was used
  New Parameter:
    -quad [cardinal direction]: This is the direction your quadBase should be set up in with a chest past it filled with fuel. This works with multiple quadRotors at once
  
--Version 3.6.0
  Command sending is now per-screen, not global. Prevents issues where messages send in wrong order
  Up key now loads previous command
  Down key now clears command line
  Using the -auto command automatically sets the computer as a station
  Fixed remove command
  All sided commands now accept screen IDs as well as side names
  New Parameter:
    -modem: sets the side that the modem is on
  
--Version 3.5.5
  Added in seagle23's old theme as "seagle"
  Added in proper help
  Slightly changed key handling
  Added support for directly copying pastebin themes into code
  
 --Version 3.5.4 (first recorded)
  Modified rednet system to new protocols
  Added in-program command line
  So many new commands
  So many new parameters
  New theme system
  Multiple screen supported and encouraged!



----Quarry Repeater----
--Version 1.0.3
  Thanks to DJF on the CC forums:
    Auto-Adds Reply Channels
    Remove channel function waits for proper char
    MC 1.5.2 Support
    Receiver won't add repeated channels
    
--Version 1.0.2
  Fixed many bugs
  Ping now works
  
--Version 1.0.1
  Added "quarryReceiver" to expected fingerprints
  
--Version 1.0 (first release)
  Everything is new :)

  
  
----MenuAPI----
--Version 1.0.1
  Program will pass current index to handler